Bug 1732577 - Fix interpretation of Fontconfig hinting toggle in PrepareFontOptions. r=jfkthame

In bug 1547063, a bug was introduced where a logic condition was improperly negated.
!(printing || !hinting) became (!printing || hinting), when the negation is actually
!printing && hinting. This fixes that so that we do the right thing here and actually
ignore the following hint-style check if hinting is false.

Differential Revision: https://phabricator.services.mozilla.com/D128017